# ai-job-source-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPMENT_GOVERNANCE.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  SUBMISSION.md  pyproject.toml
docs/: ANNOTATION_REMEDIATION_REPORT.md  ARCHITECTURE.md  BLIND_HOLDOUT_PROTOCOL.md  BLIND_HOLDOUT_V1_MANUAL_CHECKLIST.md  BLIND_HOLDOUT_V1_REPORT.md  EXTENSION_ACCEPTANCE.md  FRESH_100_V188_COLD_REPORT.md  FRESH_100_V189_S2_PHASE_C.md  FRESH_100_V189_S2_ROOT_CAUSE.md  FRESH_100_V190_S5_PHASE_C.md  FRESH_100_V190_S5_ROOT_CAUSE.md  FROZEN_100_CLOSURE_MATRIX.md  FROZEN_100_FINAL_REPORT.md  FROZEN_100_V117_REGRESSION.md  FROZEN_100_V120_REGRESSION.md  LIVE_100_FRESH_20260718_MANUAL_REVIEW.md  LIVE_100_FRESH_20260718_REPORT.md  LIVE_100_THREE_ROUTE_MANUAL_REVIEW.md  LIVE_100_THREE_ROUTE_REPORT.md  OBSERVED_40_EXACT13_FAILURE_CHECKLIST.md  OBSERVED_72_V103_STABILIZATION_REPORT.md  STABILIZATION_EVALUATION_REPORT.md
extension/: content.js  manifest.json  popup.css  popup.html  popup.js
job_source_agent/: __init__.py  acquired_brand_portal.py  application_runner.py  artifact_publish.py  batch_checkpoint.py  batch_discovery.py  browser_interaction.py  candidate_portfolio.py  candidate_route_evaluation.py  card_listing_extraction.py  career_candidate_scheduler.py  career_search.py  career_surface_discovery.py  career_transport_budget.py  checkpoint.py  checkpoint_prefix.py  cli.py  company_discovery_evidence.py  company_discovery_evidence_store.py  company_identity.py  completion_resume.py  composition.py  content_probe.py  contracts.py  (+49 more)
(+482 files in other folders)
