[project]
name = "ai-job-source-agent"
version = "0.1.0"
description = "Take-home demo for discovering company career pages and one open role from job-source inputs."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
browser = ["playwright>=1.45"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["job_source_agent*"]

[tool.pytest.ini_options]
pythonpath = ["."]
